<resources>
    <string name="app_name">BAJP Submussion 3</string>
    <string name="logo">Logo TMDB</string>
    <string name="image_preview">Image Preview</string>
    <string name="image_preview_darker">image_preview_darker</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="select_language">Select Language</string>
</resources>