<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/tvFragment"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tv_show"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_un_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom"/>

</menu>